--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </nav>
             <!--Navigation menu-->
             <nav>
-                <h1>Header</h1>
+                <h1>StoreName</h1>
                 <!-- <h1>Storefront</h1>
                 <h2>Wireframe</h2> -->
             </nav>
@@ -129,7 +129,7 @@
             <p>Parmesan cow cheddar cream cheese macaroni cheese pepper jack dolcelatte feta. Paneer cottage cheese
                 mascarpone caerphilly brie cheesecake babybel manchego.</p>
             <button>Order</button> -->
-        </div>
+        <!-- </div> -->
     </section>
     <div class="clear"></div>
     <footer>
